--- a/src/SearchFilters/SearchFilters.css
+++ b/src/SearchFilters/SearchFilters.css
@@ -1,86 +1,148 @@
-.search-section {
-  position: relative;
-  background-color: #F8F8F8; /* Background color for the left side block */
+/* General styles */
+* {
+  font-family: 'Roboto', sans-serif;
+  
 }
 
-.search-filters {
+/* Overall wrapper for both sections, positioned to start below the header */
+.search-section-wrapper {
   position: fixed;
   top: 74px;
   left: 0;
-  width: 300px; /* Adjust the width as necessary */
-  background-color: #FFFFFF;
-  padding: 20px;
+  width: 400px;
   height: calc(100vh - 74px);
-  overflow-y: auto;
+  padding: 4px 20px 20px 20px;
   box-sizing: border-box;
-  border-right: 2px solid red; /* Right border as per your design */
+  overflow-y: auto;
+  z-index: 5;
+  background-color: #F8F8F8;
+  border-right: 1px solid #D3D3D3;
+}
+
+.filter-section-wrapper {
+  position: fixed;
+  top: 500px;
+  left: 0;
+  width: 400px;
+  height: calc(100vh - 74px);
+  padding: 4px 20px 20px 20px;
+  box-sizing: border-box;
+  z-index: 6;
+  background-color: #FFFFFF;
+  border-top: 1px solid #D3D3D3;
+  border-right: 1px solid #D3D3D3;
 }
 
 
-
-.filter-title,
-.filter-subtitle {
-  font-size: 19px;
-  font-weight: medium;
-  margin-bottom: 20px;
-  font-family: 'Roboto', sans-serif;
-  background-color: #F8F8F8; /* Background color for the title */
-  padding: 10px; /* Padding for the title */
-  margin: -20px; /* Negative margin to extend the title background */
-  margin-bottom: 10px; /* Reset bottom margin for spacing */
+/* Search area styles */
+.search-area,
+.filter-area {
+  background-color: #F8F8F8;
 }
 
+.search-input,
 .filter-input {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
+.search-input label,
 .filter-input label {
   display: block;
   margin-bottom: 5px;
   font-size: 14px;
-  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
 }
 
-.filter-input input,
-.filter-input select {
-  width: 100%;
+.search-input input,
+.search-input select,
+.filter-input select,
+.filter-input input[type="checkbox"] {
+  width: 90%;
   padding: 8px;
-  border: 1px solid #CED4DA;
-  border-radius: 20px;
+  margin-bottom: 10px;
+  border: 1px solid #e4e4e4;
+  border-radius: 11px;
 }
 
-.filter-input-group {
+.search-input-group {
   display: flex;
   justify-content: space-between;
+  gap: 30px;
+  width: 94%;
 }
 
-.filter-input.half {
-  width: calc(50% - 10px);
-}
-
-.checkbox-group label {
-  display: block;
-  margin-bottom: 10px;
-  cursor: pointer;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-}
-
-.checkbox-group label input[type="checkbox"] {
-  margin-right: 10px;
+.search-input-group .search-input {
+  flex: 1;
 }
 
 .search-button-2 {
-  background-color: #42B683;
+  width: 95%;
+  background-color: #42B683; /* Normal state background color */
   color: white;
   border: none;
   padding: 10px 20px;
   cursor: pointer;
-  border-radius: 20px;
-  font-family: 'Roboto', sans-serif;
+  border-radius: 10px;
   font-size: 19px;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: 5px;
+  margin-top: 2px;
+  transition: background-color 0.3s ease; /* Smooth transition for background color */
+}
+
+.search-button-2:hover {
+  background-color: #36715c; /* Darker background color on hover */
+}
+
+/* Checkbox group styles */
+.checkbox-group label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.checkbox-group label input[type="checkbox"] {
+  border: 1px solid #e4e4e4; /* Thicker border for the checkbox */
+  /* Scale up the size of checkboxes */
+  transform: scale(1.3);
+  /* Adjust the margin-right as needed to space after scaling */
+  margin-right: 15px;
+  /* Align the checkbox correctly with the text */
+  align-self: center;
+  cursor: pointer;
+}
+
+/* Filter area styles */
+.filter-area .checkbox-group label {
+  font-weight: normal;
+}
+
+/* Title styles for search and filter areas */
+.search-title,
+.filter-title {
+  font-size: 16px;
+  font-weight: medium; /* You can change 'medium' to 500 if that is not recognized */
+  margin-bottom: 15px;
+}
+
+/* Select dropdown style */
+.filter-input select {
+  width: 95%; /* Match the width of other inputs */
+}
+
+.checkbox-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.checkbox-group label {
+  display: grid;
+  grid-template-columns: min-content auto;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 4px;
+  font-family: 'Roboto',serif; 
+  font-size: 14px;
+}
+
+.checkbox-group label input[type="checkbox"] {
+  justify-self: start;
 }
